--- a/XCode/DewertOkin/DewertOkin/Settings and more/Accessories/AccessoriesStoryboard.storyboard
+++ b/XCode/DewertOkin/DewertOkin/Settings and more/Accessories/AccessoriesStoryboard.storyboard
@@ -65,6 +65,11 @@
                                         </label>
                                     </subviews>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="descriptionLabel" destination="gP5-6t-6zs" id="JtD-sx-wrY"/>
+                                    <outlet property="productImage" destination="a3x-qc-0fb" id="Xlf-IC-6dR"/>
+                                    <outlet property="titleLabel" destination="EoX-N1-U9T" id="0LJ-Qd-Iq3"/>
+                                </connections>
                             </tableViewCell>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="HeaderCell" id="5lH-Bo-XT7">
                                 <rect key="frame" x="0.0" y="222" width="375" height="44"/>
