--- a/XCode/DewertOkin/DewertOkin/Settings and more/Accessories/AccessoriesStoryboard.storyboard
+++ b/XCode/DewertOkin/DewertOkin/Settings and more/Accessories/AccessoriesStoryboard.storyboard
@@ -74,12 +74,23 @@
                                     <outlet property="titleLabel" destination="EoX-N1-U9T" id="0LJ-Qd-Iq3"/>
                                 </connections>
                             </tableViewCell>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="HeaderCell" id="5lH-Bo-XT7">
-                                <rect key="frame" x="0.0" y="238" width="375" height="44"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="HeaderCell" rowHeight="100" id="5lH-Bo-XT7">
+                                <rect key="frame" x="0.0" y="238" width="375" height="100"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="5lH-Bo-XT7" id="8Lc-p0-0up">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="99.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dewertokinlogo" translatesAutoresizingMaskIntoConstraints="NO" id="NzQ-ox-rCN">
+                                            <rect key="frame" x="16" y="0.0" width="343" height="89"/>
+                                        </imageView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="NzQ-ox-rCN" firstAttribute="bottom" secondItem="8Lc-p0-0up" secondAttribute="bottomMargin" id="BUh-H2-p5T"/>
+                                        <constraint firstItem="NzQ-ox-rCN" firstAttribute="leading" secondItem="8Lc-p0-0up" secondAttribute="leadingMargin" id="IfN-jb-sff"/>
+                                        <constraint firstItem="NzQ-ox-rCN" firstAttribute="top" secondItem="8Lc-p0-0up" secondAttribute="top" id="hnx-KD-70o"/>
+                                        <constraint firstItem="NzQ-ox-rCN" firstAttribute="trailing" secondItem="8Lc-p0-0up" secondAttribute="trailingMargin" id="zWa-Ri-uym"/>
+                                    </constraints>
                                 </tableViewCellContentView>
                             </tableViewCell>
                         </prototypes>
@@ -95,6 +106,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="dewertokinlogo" width="171" height="79"/>
         <image name="remote" width="817" height="358"/>
     </resources>
 </document>
