--- a/XCode/DewertOkin/DewertOkin/Base.lproj/Main.storyboard
+++ b/XCode/DewertOkin/DewertOkin/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="kx5-sz-G8c">
     <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -36,6 +36,67 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-535" y="9"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="m9G-Is-ykh">
+            <objects>
+                <tabBarController id="kx5-sz-G8c" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="m60-9h-zNK">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="g6j-T1-CW4" kind="relationship" relationship="viewControllers" id="zVj-ep-D3p"/>
+                        <segue destination="oak-ZJ-aFi" kind="relationship" relationship="viewControllers" id="s1r-8L-VS4"/>
+                        <segue destination="aTM-0s-ftL" kind="relationship" relationship="viewControllers" id="ErO-zC-lMx"/>
+                        <segue destination="QAh-M1-NRS" kind="relationship" relationship="viewControllers" id="8uh-EU-8Qy"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="22I-ke-JmA" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="377" y="9"/>
+        </scene>
+        <!--Reminder-->
+        <scene sceneID="QPX-F9-D16">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Reminder" id="aTM-0s-ftL" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="Asq-2y-Die"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="t6o-8O-eIs" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1104" y="64"/>
+        </scene>
+        <!--Bluetooth-->
+        <scene sceneID="bik-vX-1aY">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Bluetooth" id="g6j-T1-CW4" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="jxG-Bp-eYo"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="CP4-ZC-zdY" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1104" y="-99"/>
+        </scene>
+        <!--Timer-->
+        <scene sceneID="ptL-KG-MTf">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Timer" id="oak-ZJ-aFi" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="T2J-YG-1BR"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="MAn-J6-yk5" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1104" y="-26"/>
+        </scene>
+        <!--SettingsMore-->
+        <scene sceneID="cSV-id-kzM">
+            <objects>
+                <viewControllerPlaceholder storyboardName="SettingsMore" id="QAh-M1-NRS" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="jsn-Wz-RFR"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9S0-oO-SnG" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1104" y="135"/>
         </scene>
     </scenes>
 </document>
