Added Remote to Main and made it the initial view

--- a/XCode/DewertOkin/DewertOkin/Base.lproj/Main.storyboard
+++ b/XCode/DewertOkin/DewertOkin/Base.lproj/Main.storyboard
@@ -48,9 +48,10 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
-                        <segue destination="oak-ZJ-aFi" kind="relationship" relationship="viewControllers" id="s1r-8L-VS4"/>
-                        <segue destination="aTM-0s-ftL" kind="relationship" relationship="viewControllers" id="ErO-zC-lMx"/>
-                        <segue destination="QAh-M1-NRS" kind="relationship" relationship="viewControllers" id="8uh-EU-8Qy"/>
+                        <segue destination="Eng-AA-IXv" kind="relationship" relationship="viewControllers" id="aQq-Yk-lne"/>
+                        <segue destination="oak-ZJ-aFi" kind="relationship" relationship="viewControllers" id="GU9-nG-6hP"/>
+                        <segue destination="aTM-0s-ftL" kind="relationship" relationship="viewControllers" id="9CG-d0-59X"/>
+                        <segue destination="QAh-M1-NRS" kind="relationship" relationship="viewControllers" id="EJL-Li-rBn"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="22I-ke-JmA" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -66,6 +67,16 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="t6o-8O-eIs" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1104" y="64"/>
+        </scene>
+        <!--Remote-->
+        <scene sceneID="fNc-o2-dp4">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Remote" id="Eng-AA-IXv" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="fQc-mS-hv8"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="adl-EO-Jr0" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1104" y="-86"/>
         </scene>
         <!--Timer-->
         <scene sceneID="ptL-KG-MTf">
